--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           go-version: '1.23.0'
 
-      - name: Go Tests
-        run: go test -v ./...
+      - name: Go Tests & Coverage
+        run: go test -v ./... -cover
