--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Go Tests & Coverage
         run: go test -v ./... -cover
 
-    name: Formatting
+jobs:
+  style:
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
