--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,8 @@ jobs:
       - name: Check formatting
         run: test -z $(go fmt ./...)
 
-      - name: Liniting
+      - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+      - name: Linting Test
         run: staticcheck ./...
