--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,13 @@ jobs:
       - name: Run unit tests
         run: go test ./... -cover
 
+      - name: Install Gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+      
+      - name: Security Check
+        run: gosec ./...
+        
+
   style:
     name: Style
     runs-on: ubuntu-latest
